EU Cookies: Set higher z-index to avoid absolute element conflict

--- a/r2/r2/public/static/css/eu-cookie-policy.less
+++ b/r2/r2/public/static/css/eu-cookie-policy.less
@@ -4,6 +4,7 @@
   left: 20px;
   right: 20px;
   text-align: center;
+  z-index: 9999;
 
   .reddit-infobar {
     display: inline-block;
